# flappybird

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.21387FAA8E0C634B.idx
src/: .gitignore  main.cpp
